--- a/css/grid.css
+++ b/css/grid.css
@@ -1,17 +1,42 @@
-.left {}
+.left {
+    left: 0;
+}
 
-.right {}
+.right {
+    right: 0;
+}
 
-.top {}
+.top {
+    top: 0;
+}
 
-.bottom {}
+.bottom {
+    bottom: 0;
+}
 
-.middle {}
+.middle {
+    bottom: 50%;
+    top: 50%;
+    left: 50%;
+    right: 50%;
+}
 
-.topleft {}
+.topleft {
+    top: 0;
+    left: 0;
+}
 
-.topright {}
+.topright {
+    top: 0;
+    right: 0;
+}
 
-.bottomleft {}
+.bottomleft {
+    bottom: 0;
+    left: 0;
+}
 
-.bottomright {}
+.bottomright {
+    bottom: 0;
+    right: 0;
+}
