--- a/css/nav.css
+++ b/css/nav.css
@@ -5,27 +5,51 @@ body{
 .menu{
   margin: 0;
   padding: 0;
+  list-style: none;
   display: flex;
   flex-wrap: wrap;
+}
+
+.menu-vertical{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin: auto;
+  position: absolute;
+  top: -999em;
 }
 
 .menu  li{
   display: inline-block;
   flex: 1;
-  background-color: black;
   text-align: center;
-  min-width: 150px;
+  min-width: 180px;
   line-height: 200%;
   border: 1px solid white;
 }
 
+.menu-vertical li{
+  position: relative;
+}
+
 .menu  a{
+  display: block;
   font-size: 1em;
   text-decoration: none;
+  background-color: black;
   color: white;
+}
+
+.sous-menu a{
+  background: silver;
+  color: black;
 }
 
 .menu  li:hover, .menu  li:active{
   transform: scale(1.1);
   font-weight: bold;
+}
+
+.menu li:hover ul{
+  top: auto;
 }
