début de la création d'un tableau

--- a/css/grid.css
+++ b/css/grid.css
@@ -42,21 +42,28 @@
 }
 .casesizex1{
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 .casesizex2{
   width: 200%;
-  height: auto;
+  height: 200%;
 }
 .casesizex3{
   width: 300%;
-  height: auto;
+  height: 300%;
 }
 .casesizex4{
   width: 400%;
-  height: auto;
+  height: 400%;
 }
 .casesizex5{
   width: 500%;
-  height: auto;
+  height: 500%;
+}
+.grid{
+  display: table;
+background-color: blue;
+}
+.lol{
+  background-color: purple;
 }
