--- a/css/grid.css
+++ b/css/grid.css
@@ -1,18 +1,31 @@
+.left, .right, .top, .bottom, .middle, .topleft, .topright, .bottomleft, .bottomright{
+  position: absolute;
+}
+
 /************************************************************POSITION START******************************/
+
 .left {
-    left: 0;
+    left: 0%;
+    bottom: 50%;
+    top: 50%;
 }
 
 .right {
-    right: 0;
+    right: 0%;
+    bottom: 50%;
+    top: 50%;
 }
 
 .top {
-    top: 0;
+  left: 50%;
+  right: 50%;
+    top: 0%;
 }
 
 .bottom {
-    bottom: 0;
+    bottom: 0%;
+    left: 50%;
+    right: 50%;
 }
 
 .middle {
@@ -23,8 +36,8 @@
 }
 
 .topleft {
-    top: 0;
-    left: 0;
+    top: 0%;
+    left: 0%;
 }
 
 .topright {
@@ -41,84 +54,96 @@
     bottom: 0;
     right: 0;
 }
+
+
 /******************************POSITION END******************************/
+
+
 /******************************CELL SIZE START******************************/
-.casesizex01{
-  width: 10%;
-  height: 10%;
+
+.casesizex01 {
+    width: 10%;
+    height: 10%;
 }
-.casesizex02{
-  width: 20%;
-  height: 20%;
+
+.casesizex02 {
+    width: 20%;
+    height: 20%;
 }
-.casesizex03{
-  width: 30%;
-  height: 30%;
+
+.casesizex03 {
+    width: 30%;
+    height: 30%;
 }
-.casesizex04{
-  width: 40%;
-  height: 40%;
+
+.casesizex04 {
+    width: 40%;
+    height: 40%;
 }
-.casesizex05{
-  width: 50%;
-  height: 50%;
+
+.casesizex05 {
+    width: 50%;
+    height: 50%;
 }
-.casesizex06{
-  width: 60%;
-  height: 60%;
+
+.casesizex06 {
+    width: 60%;
+    height: 60%;
 }
-.casesizex07{
-  width: 70%;
-  height: 70%;
+
+.casesizex07 {
+    width: 70%;
+    height: 70%;
 }
-.casesizex08{
-  width: 80%;
-  height: 80%;
+
+.casesizex08 {
+    width: 80%;
+    height: 80%;
 }
-.casesizex09{
-  width: 90%;
-  height: 90%;
+
+.casesizex09 {
+    width: 90%;
+    height: 90%;
 }
-.casesizex1{
-  width: 100%;
-  height: 100%;
+
+.casesizex1 {
+    width: 100%;
+    height: 100%;
 }
-.casesizex2{
-  width: 200%;
-  height: 200%;
+
+.casesizex2 {
+    width: 200%;
+    height: 200%;
 }
-.casesizex3{
-  width: 300%;
-  height: 300%;
+
+.casesizex3 {
+    width: 300%;
+    height: 300%;
 }
-.casesizex4{
-  width: 400%;
-  height: 400%;
+
+.casesizex4 {
+    width: 400%;
+    height: 400%;
 }
-.casesizex5{
-  width: 500%;
-  height: 500%;
+
+.casesizex5 {
+    width: 500%;
+    height: 500%;
 }
+
+
 /******************************CELL SIZE END******************************/
-.tabletitle{
-      border: 1px solid black;
-      background-color: rgba(42, 12, 237, 0.9);
+
+.cube {
+    display: block;
+    position: relative;
+    background-color: green;
+    width: 500px;
+    height: 500px;
+    border: 1px solid blue;
 }
-table
-{
-  border-collapse: collapse;
-  margin-top: 1%;
-}
-body{
-  margin: 0;
-}
-td, th
-{
+
+.tabletitle {
     border: 1px solid black;
-}
-.lol{
-  background-color: purple;
-}
-.lel{
-  background-color: yellow;
+    background-color: rgba(42, 12, 237, 0.9);
 }
