--- a/reset.css
+++ b/reset.css
@@ -1,3 +1,7 @@
+/* Reset css */
+
+/* Mise à 0 des margins, paddings, border et outline
+    reset de la taille de police */
 html, body, div, span,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, big, code, em, img, small, strike,
@@ -13,6 +17,7 @@ menu, nav, section, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
@@ -24,15 +29,6 @@ body {
 ol, ul {
 	list-style: none;
 }
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
