ajout commentaire 4 + divers ajouts

--- a/reset.css
+++ b/reset.css
@@ -35,3 +35,11 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+/* correction du display pour les anciens navigateurs */
+audio,
+canvas,
+progress,
+video {
+  display: inline-block;
+  vertical-align: baseline;
+}
