--- a/css/nav.css
+++ b/css/nav.css
@@ -2,15 +2,19 @@ body{
   margin: 0;
 }
 
-.menu, .menu li ul{
+nav.menu, .menu p, .menu p a, ul.menu, .menu li ul{
   margin: 0;
   padding: 0;
+}
+
+ul.menu, .menu li ul{
+  z-index: 1;
   list-style: none;
   display: flex;
   flex-wrap: wrap;
 }
 
-p.menu{
+.menu p a{
   display: none;
 }
 
@@ -49,7 +53,7 @@ p.menu{
   color: black;
 }
 
-.menu  li:hover, .menu li ul li:hover, .menu li:active, .menu li ul li:active{
+.menu  li:hover, .menu li ul li:hover, .menu li:active, .menu li ul li:active, .menu p:hover, .menu p:active{
   transform: scale(1.05);
   font-weight: bold;
 }
@@ -59,11 +63,12 @@ p.menu{
 }
 
 @media screen and (max-width: 640px){
-  p.menu{
+  nav.menu{
     display: inline-block;
+    position: relative;
   }
 
-  p.menu a{
+  .menu p a{
     margin: 0;
     padding: 0;
     display: block;
@@ -76,17 +81,24 @@ p.menu{
   }
 
   ul.menu{
-    display: block;
+    display: flex;
+    flex-direction: column;
     width: 180px;
     margin: auto;
     position: absolute;
     top: -999em;
   }
 
-  ul.menu li{
+  ul.menu > li{
     position: relative;
   }
 
-  .menu p:hover ul, .menu p:active ul{
-    top: auto;
+  nav.menu:hover ul.menu, nav.menu:active ul.menu{
+    top: 50px;
+    left: 0;
+  }
+
+  .menu li:hover ul, .menu li:active ul{
+    top: -1px;
+    left: 176px;
   }
