--- a/css/grid.css
+++ b/css/grid.css
@@ -9,33 +9,34 @@
     left: 0%;
     bottom: 50%;
     top: 50%;
+        transform: translateY(-50%);
 }
 
 .right {
     right: 0%;
     bottom: 50%;
     top: 50%;
+        transform: translateY(-50%);
 }
 
 .top {
     left: 50%;
     right: 50%;
     top: 0%;
+transform: translate(-50%);
 }
 
 .bottom {
     bottom: 0%;
     left: 50%;
-    right: 50%;
+        transform: translate(-50%);
 }
 
 .middle {
-    bottom: 50%;
     top: 50%;
     left: 50%;
-    right: 50%;
+    transform: translate(-50%, -50%);
 }
-
 .topleft {
     top: 0%;
     left: 0%;
