--- a/css/style.css
+++ b/css/style.css
@@ -39,5 +39,26 @@ div.rule-container div
     flex-grow: 1;
     min-width: 1px;
     max-width: 50%;
+    min-height: 30px;
     box-sizing: border-box;
+}
+
+div.rule-text
+{
+    background-color: #FF0000;
+}
+
+div.rule-show
+{
+    display: flex;
+    background-color: #0000FF;
+}
+
+div.rule-show div
+{
+    box-sizing: border-box;
+    margin: 5px;
+    min-width: 33%;
+    max-width: 50%;
+    background-color: cyan;
 }
