--- a/css/style.css
+++ b/css/style.css
@@ -42,14 +42,14 @@ div.rule-container div
 
 div.rule-text
 {
-    width: 25%;
+    width: 30%;
     background-color: #FF0000;
 }
 
 div.rule-show
 {
+    flex-grow: 1;
     display: flex;
-    width: 75%;
     background-color: #0000FF;
 }
 
