ajout d'un tableau

--- a/css/grid.css
+++ b/css/grid.css
@@ -136,8 +136,21 @@ transform: translate(-50%);
 
 /******************************CELL SIZE END******************************/
 
+/*********************************************************************************/
+.iwannabeatable{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  background-color: blue;
+  width: 100%;
+}
+.imthetablechild{
+    background-color: purple;
+    flex: 1;
+}
+/******************************************************************************/
 
-/*************************************************************************/
+/******************************MAX SIZE OF PARENT START******************************/
 
 .maxcontentsize01 {
     max-width: 10%;
@@ -179,8 +192,7 @@ transform: translate(-50%);
     max-width: 100%;
 }
 
-
-/*************************************************************************/
+/*******************************MAX SIZE OF PARENT END******************************************/
 
 .resizefromuser {
     resize: both;
