--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ article
 
 section
 {
-    border: 3px solid black;
+    border: 3px solid #000000;
     width: 100%;
     margin-bottom: 5px;
     box-sizing: border-box;
@@ -54,11 +54,10 @@ div.rule-show
 
 div.rule-show div
 {
-    box-sizing: border-box;
     width: 50%;
 }
 
 div.rule-show div:first-child
 {
-    border: 2px solid black;
+    border: 2px solid #3F3F3F;
 }
