--- a/AcSS/reset.css
+++ b/AcSS/reset.css
@@ -2,13 +2,19 @@
 
 /* Mise à 0 des margins, paddings, border et outline
     reset de la taille de police */
-html, body, div, span,
+html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, big, code, em, img, small, strike,
-strong, b, u, i, center, ol, ul, li,
-fieldset, form, label, legend, table,
-article, aside, footer, header,
-menu, nav, section, audio, video {
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -17,7 +23,7 @@ menu, nav, section, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
-/* Mise au norme de la police de base */ 
+/* Mise au norme de la police de base */
 html {
   font-family: sans-serif;
 }
