--- a/AcSS/grid.css
+++ b/AcSS/grid.css
@@ -7,21 +7,18 @@
 
 .left {
     left: 0%;
-    bottom: 50%;
     top: 50%;
         transform: translateY(-50%);
 }
 
 .right {
     right: 0%;
-    bottom: 50%;
     top: 50%;
         transform: translateY(-50%);
 }
 
 .top {
     left: 50%;
-    right: 50%;
     top: 0%;
 transform: translate(-50%);
 }
@@ -144,7 +141,7 @@ transform: translate(-50%);
   width: 100%;
 
 }
-.flextablechild{
+.flextable >*{
     background-color: purple;
     flex: 1;
 }
