--- a/AcSS/normalize.css
+++ b/AcSS/normalize.css
@@ -55,11 +55,21 @@ footer
     background-color: #00FFFF;
 }
 
-h1, footer h2
+header h1, footer h2
 {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
     white-space: nowrap;
+}
+
+header h1
+{
+    font-size: 4rem;
+}
+
+footer h2
+{
+    font-size: 2.5rem;
 }
