--- a/AcSS/grid.css
+++ b/AcSS/grid.css
@@ -60,72 +60,72 @@ transform: translate(-50%);
 
 /******************************CELL SIZE START******************************/
 
-.casesizex01 {
+.CASESIZEx01 {
     width: 10%;
     height: 10%;
 }
 
-.casesizex02 {
+.CASESIZEx02 {
     width: 20%;
     height: 20%;
 }
 
-.casesizex03 {
+.CASESIZEx03 {
     width: 30%;
     height: 30%;
 }
 
-.casesizex04 {
+.CASESIZEx04 {
     width: 40%;
     height: 40%;
 }
 
-.casesizex05 {
+.CASESIZEx05 {
     width: 50%;
     height: 50%;
 }
 
-.casesizex06 {
+.CASESIZEx06 {
     width: 60%;
     height: 60%;
 }
 
-.casesizex07 {
+.CASESIZEx07 {
     width: 70%;
     height: 70%;
 }
 
-.casesizex08 {
+.CASESIZEx08 {
     width: 80%;
     height: 80%;
 }
 
-.casesizex09 {
+.CASESIZEx09 {
     width: 90%;
     height: 90%;
 }
 
-.casesizex1 {
+.CASESIZEx1 {
     width: 100%;
     height: 100%;
 }
 
-.casesizex2 {
+.CASESIZEx2 {
     width: 200%;
     height: 200%;
 }
 
-.casesizex3 {
+.CASESIZEx3 {
     width: 300%;
     height: 300%;
 }
 
-.casesizex4 {
+.CASESIZEx4 {
     width: 400%;
     height: 400%;
 }
 
-.casesizex5 {
+.CASESIZEx5 {
     width: 500%;
     height: 500%;
 }
@@ -134,14 +134,14 @@ transform: translate(-50%);
 /******************************CELL SIZE END******************************/
 
 /*********************************************************************************/
-.flextable{
+.FLEX{
   display: flex;
   flex-direction: row;
   background-color: blue;
   width: 100%;
 
 }
-.flextable >* {
+.FLEX >* {
     background-color: purple;
     flex: 1;
 }
@@ -149,62 +149,61 @@ transform: translate(-50%);
 
 /******************************MAX SIZE OF PARENT START******************************/
 
-.maxcontentsize01 {
+.MAXCONTENTSIZE01 {
     max-width: 10%;
 }
 
-.maxcontentsize02 {
+.MAXCONTENTSIZE02 {
     max-width: 20%;
 }
 
-.maxcontentsize03 {
+.MAXCONTENTSIZE03 {
     max-width: 30%;
 }
 
-.maxcontentsize04 {
+.MAXCONTENTSIZE04 {
     max-width: 40%;
 }
 
-.maxcontentsize05 {
+.MAXCONTENTSIZE05 {
     max-width: 50%;
 }
 
-.maxcontentsize06 {
+.MAXCONTENTSIZE06 {
     max-width: 60%;
 }
 
-.maxcontentsize07 {
+.MAXCONTENTSIZE07 {
     max-width: 70%;
 }
 
-.maxcontentsize08 {
+.MAXCONTENTSIZE08 {
     max-width: 80%;
 }
 
-.maxcontentsize09 {
+.MAXCONTENTSIZE09 {
     max-width: 90%;
 }
 
-.maxcontentsize1 {
+.MAXCONTENTSIZE1 {
     max-width: 100%;
 }
 
 /*******************************MAX SIZE OF PARENT END******************************************/
 
-.resizefromuser {
+.RESIZEFROMUSER {
     resize: both;
     overflow: auto;
 }
 
-.cube {
+.CUBE {
     display: block;
     position: relative;
     width: 500px;
     height: 500px;
     border: 1px solid blue;
 }
-
-.tabletitle {
+.TABLETITLE {
     border: 1px solid black;
     background-color: rgba(42, 12, 237, 0.9);
 }
