--- a/css/style.css
+++ b/css/style.css
@@ -58,12 +58,12 @@ div.rule-show
     background-color: #00FFFF;
 }
 
-div.rule-show div
+div.rule-show >div
 {
     width: 50%;
 }
 
-div.rule-show div:first-child
+div.rule-show > div:first-child
 {
     border: 2px solid #3F3F3F;
 }
