--- a/css/example.css
+++ b/css/example.css
@@ -11,7 +11,7 @@ main
 
 article
 {
-    border-box: 3px solid #000000;
+    border: 3px solid #000000;
     width: 100%;
     margin-bottom: 20px;
     box-sizing: border-box;
